test ability to have all added comonents to be put in accordion

--- a/example_notebooks/Purity_Reviewer_Tutorial.ipynb
+++ b/example_notebooks/Purity_Reviewer_Tutorial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "id": "83de658a",
    "metadata": {},
    "outputs": [
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "id": "cded4f95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from JupyterReviewer.Reviewers.MatchedPurityReviewer import MatchedPurityReviewer\n",
+    "from JupyterReviewer.Reviewers.MatchedPurityReviewer_DEPRECATED import MatchedPurityReviewer\n",
     "\n",
     "from JupyterReviewer.ReviewDataInterface import DataAnnotation\n",
     "from JupyterReviewer.ReviewDataApp import AppComponent\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 68,
    "id": "12d8db00",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "id": "57b1e373-82d6-4c00-8df2-2321564fa38a",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "id": "5020be98-a05c-4d74-a64e-e74642c61039",
    "metadata": {},
    "outputs": [],
@@ -498,25 +498,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 75,
    "id": "f7f05aa1",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewDataInterface.py:38: UserWarning:\n",
-      "\n",
-      "Loading existing data pkl file\n",
-      "\n"
+      "rdata tsv directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_3/rdata_to_tsv\n",
+      "cnp figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_3/cnp_figs\n",
+      "Reloading cnp figs\n",
+      "mut figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_3/mut_figs\n",
+      "Reloading mut figs\n"
      ]
     }
    ],
    "source": [
-    "review_data_fn = '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/review_data.7.pkl'\n",
+    "review_data_fn = '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/review_data.9.pkl'\n",
     "\n",
     "matched_reviewer = MatchedPurityReviewer()\n",
     "matched_reviewer.set_review_data(data_pkl_fn = review_data_fn, \n",
@@ -527,8 +528,8 @@
     "                                 acs_col='alleliccapseg_tsv', \n",
     "                                 maf_col='mutation_validator_validated_maf',\n",
     "                                 rdata_fn_col='local_absolute_rdata',\n",
-    "                                 reload_cnp_figs=False,\n",
-    "                                 reload_mut_figs=False,\n",
+    "                                 reload_cnp_figs=True,\n",
+    "                                 reload_mut_figs=True,\n",
     "                                )\n",
     "matched_reviewer.set_review_app(sample_info_cols=['absolute_highres_plot', 'alleliccapseg_plot', 'wxs_purity'],\n",
     "                                acs_col='alleliccapseg_tsv', \n",
@@ -540,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "id": "e326100d-5333-45c4-9cbb-2f9ebf6c4412",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
