collapsable components option

--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "id": "fdeffded",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "id": "8933f1a7",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "id": "829afcf7",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "sample_4   ./example_data/Jupyter_Reviewer_Tutorial/mut_v...  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "id": "ae59c4c8",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "4  gene_4  0.058704  sample_0  149            8          141"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "id": "b02b5fef",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "id": "32ab23ca-c27d-4c0d-9149-08c24b244d26",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
        "dict_keys(['index', 'description', 'annot_col_config_dict', 'annot_df', 'history_df', 'df'])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "id": "161965c4",
    "metadata": {},
    "outputs": [
@@ -625,7 +625,7 @@
        "4  ./example_data/Jupyter_Reviewer_Tutorial/mut_v...   New data  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 74,
    "id": "cdc0779a",
    "metadata": {},
    "outputs": [],
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 75,
    "id": "2875d634",
    "metadata": {},
    "outputs": [],
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 76,
    "id": "6f611126-58d6-48b7-a056-01737bc2b263",
    "metadata": {},
    "outputs": [
@@ -748,7 +748,7 @@
        "4              Testing  Remove"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "id": "b00fd0cf",
    "metadata": {},
    "outputs": [
@@ -784,7 +784,7 @@
     }
    ],
    "source": [
-    "my_reviewer.run()"
+    "my_reviewer.run(collapsable=True)"
    ]
   },
   {
