autofill to latest annotation

--- a/example_notebooks/Purity_Reviewer_Tutorial.ipynb
+++ b/example_notebooks/Purity_Reviewer_Tutorial.ipynb
@@ -498,21 +498,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "id": "f7f05aa1",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "rdata tsv directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_3/rdata_to_tsv\n",
-      "cnp figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_3/cnp_figs\n",
-      "Reloading cnp figs\n",
-      "mut figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_3/mut_figs\n",
-      "Reloading mut figs\n"
+      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewDataInterface.py:38: UserWarning:\n",
+      "\n",
+      "Loading existing data pkl file\n",
+      "\n"
      ]
     }
    ],
@@ -541,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "id": "e326100d-5333-45c4-9cbb-2f9ebf6c4412",
    "metadata": {},
    "outputs": [
