--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -789,6 +789,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3f7eb9ef-1dcf-4623-9a23-f03a261b927a",
+   "metadata": {},
+   "source": [
+    "You can set `collapsable=False` if you do not want collapsable components."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a015ccb4",
    "metadata": {},
    "source": [
