--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 120,
    "id": "cec30f2c",
    "metadata": {},
    "outputs": [],
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 121,
    "id": "1cf5f2b7",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 122,
    "id": "bcaac9d1",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 123,
    "id": "386d24d6-311c-4678-9832-503aadd8e058",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1119,7 @@
        "sample_3  Remove          Remove"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 124,
    "id": "1e23f569",
    "metadata": {},
    "outputs": [],
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 125,
    "id": "f44d22bb",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1218,7 @@
        "1  Anthracycline  remission       225"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 126,
    "id": "9fd80758",
    "metadata": {},
    "outputs": [],
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 127,
    "id": "e4e7972d",
    "metadata": {},
    "outputs": [],
@@ -1290,10 +1290,26 @@
     ")\n",
     "\n",
     "my_reviewer_2.add_review_data_annotation(\n",
+    "    annot_name='Test number', \n",
+    "    review_data_annotation=DataAnnotation(\n",
+    "        annot_value_type='string', \n",
+    "        options=['1', '3', '5'],\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "my_reviewer_2.add_review_data_annotation(\n",
     "    annot_name='Test', \n",
     "    review_data_annotation=DataAnnotation(\n",
     "        annot_value_type='multi', \n",
     "        options=['1', '2', '3']\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "my_reviewer_2.add_review_data_annotation(\n",
+    "    annot_name='A number', \n",
+    "    review_data_annotation=DataAnnotation(\n",
+    "        annot_value_type='float', \n",
+    "        options=[1, 2, 3, 4]\n",
     "    )\n",
     ")\n",
     "\n",
@@ -1305,8 +1321,14 @@
     "    annot_name='Histogram color', \n",
     "    app_display_type='select')\n",
     "my_reviewer_2.add_review_data_annotations_app_display(\n",
+    "    annot_name='Test number', \n",
+    "    app_display_type='select')\n",
+    "my_reviewer_2.add_review_data_annotations_app_display(\n",
     "    annot_name='Test', \n",
     "    app_display_type='checklist')\n",
+    "my_reviewer_2.add_review_data_annotations_app_display(\n",
+    "    annot_name='A number', \n",
+    "    app_display_type='number')\n",
     "\n",
     "# Edit 'Notes' annotation to be displayed with 'text' instead of 'textarea'\n",
     "my_reviewer_2.add_review_data_annotations_app_display(\n",
@@ -1337,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 128,
    "id": "67cb42cd",
    "metadata": {},
    "outputs": [],
@@ -1359,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 129,
    "id": "7871969b",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 130,
    "id": "c7c137a8-a740-47b7-bf3b-c13e4e8dea27",
    "metadata": {},
    "outputs": [
@@ -1406,7 +1428,9 @@
        "      <th>Notes</th>\n",
        "      <th>Confidence</th>\n",
        "      <th>Histogram color</th>\n",
+       "      <th>Test number</th>\n",
        "      <th>Test</th>\n",
+       "      <th>A number</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1416,7 +1440,9 @@
        "      <td>test</td>\n",
        "      <td>Unsure</td>\n",
        "      <td>blue</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3,1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_1</th>\n",
@@ -1424,7 +1450,9 @@
        "      <td>Testing</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>2,3</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_2</th>\n",
@@ -1433,6 +1461,8 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_3</th>\n",
@@ -1441,20 +1471,28 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Flag           Notes Confidence Histogram color Test\n",
-       "sample_0  Remove            test     Unsure            blue    1\n",
-       "sample_1  Remove         Testing                             2,3\n",
-       "sample_2  Remove  Nothing to say                                \n",
-       "sample_3  Remove          Remove                                "
+       "            Flag           Notes Confidence Histogram color Test number Test  \\\n",
+       "sample_0  Remove            test     Unsure            blue           3  3,1   \n",
+       "sample_1  Remove         Testing                                               \n",
+       "sample_2  Remove  Nothing to say                                               \n",
+       "sample_3  Remove          Remove                                               \n",
+       "\n",
+       "          A number  \n",
+       "sample_0       1.0  \n",
+       "sample_1       NaN  \n",
+       "sample_2       NaN  \n",
+       "sample_3       NaN  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1473,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 131,
    "id": "b7630df3-40b5-4e8a-9638-cdf4cd59022b",
    "metadata": {},
    "outputs": [
