editable DataAnnotation configurations and validation within the interface rather than the DataAnnotation objects themselves

--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "8933f1a7",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "829afcf7",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "sample_4   ./example_data/Jupyter_Reviewer_Tutorial/mut_v...  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "ae59c4c8",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "4  gene_4  0.058704  sample_0  149            8          141"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,10 +449,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "b02b5fef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewDataInterface.py:38: UserWarning: Loading existing data pkl file\n",
+      "  warnings.warn(f\"Loading existing data pkl file\")\n"
+     ]
+    }
+   ],
    "source": [
     "if not os.path.exists('data'):\n",
     "    os.mkdir('data')\n",
@@ -481,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "32ab23ca-c27d-4c0d-9149-08c24b244d26",
    "metadata": {},
    "outputs": [
@@ -491,7 +500,7 @@
        "dict_keys(['index', 'description', 'annot_col_config_dict', 'annot_df', 'history_df', 'df'])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "161965c4",
    "metadata": {},
    "outputs": [
@@ -628,7 +637,7 @@
        "sample_4   Testing preprocessing  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "cdc0779a",
    "metadata": {},
    "outputs": [],
@@ -672,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "2875d634",
    "metadata": {},
    "outputs": [],
@@ -683,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "6f611126-58d6-48b7-a056-01737bc2b263",
    "metadata": {},
    "outputs": [
@@ -751,7 +760,7 @@
        "sample_4           "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "b00fd0cf",
    "metadata": {},
    "outputs": [
@@ -813,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "id": "8bff62a2",
    "metadata": {},
    "outputs": [
@@ -849,41 +858,33 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>sample_0</td>\n",
-       "      <td>2022-11-28 18:27:15.938821</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>test</td>\n",
-       "      <td>Remove</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_2</td>\n",
-       "      <td>2022-11-28 18:27:20.755836</td>\n",
+       "      <td>2022-11-29 11:30:47.960832</td>\n",
        "      <td>./data/example_reviewer_data.pkl</td>\n",
        "      <td>Nothing to say</td>\n",
        "      <td>Remove</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>sample_1</td>\n",
-       "      <td>2022-11-28 18:27:32.239200</td>\n",
+       "      <td>sample_2</td>\n",
+       "      <td>2022-11-29 11:30:53.258246</td>\n",
+       "      <td>./data/example_reviewer_data.pkl</td>\n",
+       "      <td>sdf</td>\n",
+       "      <td>Remove</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sample_4</td>\n",
+       "      <td>2022-11-29 11:30:58.477319</td>\n",
        "      <td>./data/example_reviewer_data.pkl</td>\n",
        "      <td>Testing</td>\n",
        "      <td>Remove</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>sample_4</td>\n",
-       "      <td>2022-11-28 18:27:36.586058</td>\n",
+       "      <td>sample_8</td>\n",
+       "      <td>2022-11-29 11:31:04.806890</td>\n",
        "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Keep</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_3</td>\n",
-       "      <td>2022-11-28 18:27:42.304502</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Remove</td>\n",
+       "      <td>Testing 2</td>\n",
        "      <td>Remove</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -892,21 +893,19 @@
       ],
       "text/plain": [
        "      index                  timestamp                    source_data_fn  \\\n",
-       "0  sample_0 2022-11-28 18:27:15.938821  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_2 2022-11-28 18:27:20.755836  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_1 2022-11-28 18:27:32.239200  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_4 2022-11-28 18:27:36.586058  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_3 2022-11-28 18:27:42.304502  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_0 2022-11-29 11:30:47.960832  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_2 2022-11-29 11:30:53.258246  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_4 2022-11-29 11:30:58.477319  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_8 2022-11-29 11:31:04.806890  ./data/example_reviewer_data.pkl   \n",
        "\n",
        "            Notes    Flag  \n",
-       "0            test  Remove  \n",
        "0  Nothing to say  Remove  \n",
+       "0             sdf  Remove  \n",
        "0         Testing  Remove  \n",
-       "0  Nothing to say    Keep  \n",
-       "0          Remove  Remove  "
+       "0       Testing 2  Remove  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "725efe31",
    "metadata": {},
    "outputs": [],
@@ -963,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 44,
    "id": "cec30f2c",
    "metadata": {},
    "outputs": [],
@@ -983,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 45,
    "id": "1cf5f2b7",
    "metadata": {},
    "outputs": [
@@ -991,7 +990,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['sample_0', 'sample_1', 'sample_2', 'sample_3']\n"
+      "['sample_0', 'sample_2', 'sample_4', 'sample_8']\n"
      ]
     }
    ],
@@ -1032,15 +1031,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 46,
    "id": "bcaac9d1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading data from previous review with pickle file\n"
+      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewDataInterface.py:38: UserWarning:\n",
+      "\n",
+      "Loading existing data pkl file\n",
+      "\n"
      ]
     }
    ],
@@ -1057,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 47,
    "id": "386d24d6-311c-4678-9832-503aadd8e058",
    "metadata": {},
    "outputs": [
@@ -1082,44 +1084,75 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Flag</th>\n",
        "      <th>Notes</th>\n",
+       "      <th>Flag</th>\n",
+       "      <th>Confidence</th>\n",
+       "      <th>Histogram color</th>\n",
+       "      <th>Test number</th>\n",
+       "      <th>Test</th>\n",
+       "      <th>A number</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sample_0</th>\n",
-       "      <td>Remove</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sample_1</th>\n",
-       "      <td>Remove</td>\n",
-       "      <td>Testing</td>\n",
+       "      <td>Nothing to say</td>\n",
+       "      <td>Keep</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_2</th>\n",
+       "      <td>sdf</td>\n",
        "      <td>Remove</td>\n",
-       "      <td>Nothing to say</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>sample_3</th>\n",
+       "      <th>sample_4</th>\n",
+       "      <td>Testing</td>\n",
        "      <td>Remove</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sample_8</th>\n",
+       "      <td>Testing 2</td>\n",
        "      <td>Remove</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Flag           Notes\n",
-       "sample_0  Remove            test\n",
-       "sample_1  Remove         Testing\n",
-       "sample_2  Remove  Nothing to say\n",
-       "sample_3  Remove          Remove"
+       "                   Notes    Flag Confidence Histogram color Test number Test  \\\n",
+       "sample_0  Nothing to say    Keep                                               \n",
+       "sample_2             sdf  Remove                                               \n",
+       "sample_4         Testing  Remove                                               \n",
+       "sample_8       Testing 2  Remove                                               \n",
+       "\n",
+       "          A number  \n",
+       "sample_0       2.0  \n",
+       "sample_2       NaN  \n",
+       "sample_4       NaN  \n",
+       "sample_8       NaN  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 54,
    "id": "1e23f569",
    "metadata": {},
    "outputs": [],
@@ -1165,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 55,
    "id": "f44d22bb",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1251,7 @@
        "1  Anthracycline  remission       225"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 56,
    "id": "9fd80758",
    "metadata": {},
    "outputs": [],
@@ -1263,13 +1296,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 68,
    "id": "e4e7972d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from JupyterReviewer.Data import DataAnnotation\n",
+    "import numpy as np\n",
     "my_reviewer_2.set_default_review_data_annotations_configuration() # sets both annotation columns and display\n",
+    "\n",
+    "\n",
+    "my_reviewer_2.add_review_data_annotation(\n",
+    "    annot_name='Flag', \n",
+    "    review_data_annotation=DataAnnotation(\n",
+    "        annot_value_type='string', \n",
+    "        options=['Keep', 'Remove', 'Unsure'], \n",
+    "        default='Keep'\n",
+    "    )\n",
+    ")\n",
     "\n",
     "# Add additional annotation\n",
     "my_reviewer_2.add_review_data_annotation(\n",
@@ -1359,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 69,
    "id": "67cb42cd",
    "metadata": {},
    "outputs": [],
@@ -1381,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 70,
    "id": "7871969b",
    "metadata": {},
    "outputs": [
@@ -1391,6 +1435,16 @@
      "text": [
       "Dash app running on http://0.0.0.0:8050/\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/opt/anaconda3/envs/test_JupyterReviewer_pypi/lib/python3.7/site-packages/numpy/core/fromnumeric.py:3162: VisibleDeprecationWarning:\n",
+      "\n",
+      "Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -1399,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 65,
    "id": "c7c137a8-a740-47b7-bf3b-c13e4e8dea27",
    "metadata": {},
    "outputs": [
@@ -1424,8 +1478,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Flag</th>\n",
        "      <th>Notes</th>\n",
+       "      <th>Flag</th>\n",
        "      <th>Confidence</th>\n",
        "      <th>Histogram color</th>\n",
        "      <th>Test number</th>\n",
@@ -1436,37 +1490,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sample_0</th>\n",
-       "      <td>Remove</td>\n",
-       "      <td>test</td>\n",
-       "      <td>Unsure</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3,1</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sample_1</th>\n",
-       "      <td>Remove</td>\n",
-       "      <td>Testing</td>\n",
+       "      <td>Nothing to say</td>\n",
+       "      <td>Keep</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>[3, 2]</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_2</th>\n",
+       "      <td>sdf</td>\n",
        "      <td>Remove</td>\n",
-       "      <td>Nothing to say</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>[1, 2]</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sample_4</th>\n",
+       "      <td>Testing</td>\n",
+       "      <td>Remove</td>\n",
+       "      <td></td>\n",
+       "      <td>blue</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>sample_3</th>\n",
-       "      <td>Remove</td>\n",
+       "      <th>sample_8</th>\n",
+       "      <td>Testing 2</td>\n",
        "      <td>Remove</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -1479,20 +1533,20 @@
        "</div>"
       ],
       "text/plain": [
-       "            Flag           Notes Confidence Histogram color Test number Test  \\\n",
-       "sample_0  Remove            test     Unsure            blue           3  3,1   \n",
-       "sample_1  Remove         Testing                                               \n",
-       "sample_2  Remove  Nothing to say                                               \n",
-       "sample_3  Remove          Remove                                               \n",
+       "                   Notes    Flag Confidence Histogram color Test number  \\\n",
+       "sample_0  Nothing to say    Keep                                          \n",
+       "sample_2             sdf  Remove                                          \n",
+       "sample_4         Testing  Remove                       blue               \n",
+       "sample_8       Testing 2  Remove                                          \n",
        "\n",
-       "          A number  \n",
-       "sample_0       1.0  \n",
-       "sample_1       NaN  \n",
-       "sample_2       NaN  \n",
-       "sample_3       NaN  "
+       "            Test  A number  \n",
+       "sample_0  [3, 2]       2.0  \n",
+       "sample_2  [1, 2]       NaN  \n",
+       "sample_4               NaN  \n",
+       "sample_8               NaN  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 63,
    "id": "b7630df3-40b5-4e8a-9638-cdf4cd59022b",
    "metadata": {},
    "outputs": [
