fix display of lists in app for traverse table and history

--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 113,
    "id": "cec30f2c",
    "metadata": {},
    "outputs": [],
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 114,
    "id": "1cf5f2b7",
    "metadata": {},
    "outputs": [
@@ -1031,18 +1031,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 115,
    "id": "bcaac9d1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewDataInterface.py:38: UserWarning:\n",
-      "\n",
-      "Loading existing data pkl file\n",
-      "\n"
+      "Loading data from previous review with pickle file\n"
      ]
     }
    ],
@@ -1059,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 116,
    "id": "386d24d6-311c-4678-9832-503aadd8e058",
    "metadata": {},
    "outputs": [
@@ -1086,73 +1083,42 @@
        "      <th></th>\n",
        "      <th>Notes</th>\n",
        "      <th>Flag</th>\n",
-       "      <th>Confidence</th>\n",
-       "      <th>Histogram color</th>\n",
-       "      <th>Test number</th>\n",
-       "      <th>Test</th>\n",
-       "      <th>A number</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sample_0</th>\n",
        "      <td>Nothing to say</td>\n",
-       "      <td>Keep</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>Remove</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_2</th>\n",
        "      <td>sdf</td>\n",
        "      <td>Remove</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_4</th>\n",
        "      <td>Testing</td>\n",
        "      <td>Remove</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_8</th>\n",
        "      <td>Testing 2</td>\n",
        "      <td>Remove</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   Notes    Flag Confidence Histogram color Test number Test  \\\n",
-       "sample_0  Nothing to say    Keep                                               \n",
-       "sample_2             sdf  Remove                                               \n",
-       "sample_4         Testing  Remove                                               \n",
-       "sample_8       Testing 2  Remove                                               \n",
-       "\n",
-       "          A number  \n",
-       "sample_0       2.0  \n",
-       "sample_2       NaN  \n",
-       "sample_4       NaN  \n",
-       "sample_8       NaN  "
+       "                   Notes    Flag\n",
+       "sample_0  Nothing to say  Remove\n",
+       "sample_2             sdf  Remove\n",
+       "sample_4         Testing  Remove\n",
+       "sample_8       Testing 2  Remove"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 117,
    "id": "1e23f569",
    "metadata": {},
    "outputs": [],
@@ -1198,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 118,
    "id": "f44d22bb",
    "metadata": {},
    "outputs": [
@@ -1251,7 +1217,7 @@
        "1  Anthracycline  remission       225"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 119,
    "id": "9fd80758",
    "metadata": {},
    "outputs": [],
@@ -1296,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 120,
    "id": "e4e7972d",
    "metadata": {},
    "outputs": [],
@@ -1403,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 121,
    "id": "67cb42cd",
    "metadata": {},
    "outputs": [],
@@ -1425,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 122,
    "id": "7871969b",
    "metadata": {},
    "outputs": [
@@ -1435,16 +1401,6 @@
      "text": [
       "Dash app running on http://0.0.0.0:8050/\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cchu/opt/anaconda3/envs/test_JupyterReviewer_pypi/lib/python3.7/site-packages/numpy/core/fromnumeric.py:3162: VisibleDeprecationWarning:\n",
-      "\n",
-      "Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -1453,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 123,
    "id": "c7c137a8-a740-47b7-bf3b-c13e4e8dea27",
    "metadata": {},
    "outputs": [
@@ -1491,12 +1447,12 @@
        "    <tr>\n",
        "      <th>sample_0</th>\n",
        "      <td>Nothing to say</td>\n",
-       "      <td>Keep</td>\n",
+       "      <td>Remove</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>[3, 2]</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_2</th>\n",
@@ -1505,7 +1461,7 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>[1, 2]</td>\n",
+       "      <td></td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1513,7 +1469,7 @@
        "      <td>Testing</td>\n",
        "      <td>Remove</td>\n",
        "      <td></td>\n",
-       "      <td>blue</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
@@ -1533,26 +1489,26 @@
        "</div>"
       ],
       "text/plain": [
-       "                   Notes    Flag Confidence Histogram color Test number  \\\n",
-       "sample_0  Nothing to say    Keep                                          \n",
-       "sample_2             sdf  Remove                                          \n",
-       "sample_4         Testing  Remove                       blue               \n",
-       "sample_8       Testing 2  Remove                                          \n",
+       "                   Notes    Flag Confidence Histogram color Test number Test  \\\n",
+       "sample_0  Nothing to say  Remove                                               \n",
+       "sample_2             sdf  Remove                                               \n",
+       "sample_4         Testing  Remove                                               \n",
+       "sample_8       Testing 2  Remove                                               \n",
        "\n",
-       "            Test  A number  \n",
-       "sample_0  [3, 2]       2.0  \n",
-       "sample_2  [1, 2]       NaN  \n",
-       "sample_4               NaN  \n",
-       "sample_8               NaN  "
+       "          A number  \n",
+       "sample_0       NaN  \n",
+       "sample_2       NaN  \n",
+       "sample_4       NaN  \n",
+       "sample_8       NaN  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_reviewer_2.get_annot()"
+    "my_reviewer_2.get_annot()\n"
    ]
   },
   {
@@ -1565,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 124,
    "id": "b7630df3-40b5-4e8a-9638-cdf4cd59022b",
    "metadata": {},
    "outputs": [
@@ -1574,6 +1530,16 @@
      "output_type": "stream",
      "text": [
       "Dash app running on http://0.0.0.0:8050/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/opt/anaconda3/envs/test_JupyterReviewer_pypi/lib/python3.7/site-packages/numpy/core/fromnumeric.py:3162: VisibleDeprecationWarning:\n",
+      "\n",
+      "Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "\n"
      ]
     }
    ],
